<resources>
    <string name="ignore_call">Ignore</string>
    <string name="ap_version_id">3.00.0001</string>
    <string name="htc_private_app">Phone</string>
    <string name="cli_payphone">Payphone</string>
    <string name="custom">C:</string>
    <string name="home">H:</string>
    <string name="mobile">M:</string>
    <string name="work">W:</string>
    <string name="fax_work">F:</string>
    <string name="fax_home">F:</string>
    <string name="pager">P:</string>
    <string name="other">O:</string>
    <string name="sum_tty_enabled">May decrease the quality of voice calls through a wired headset</string>
    <string name="sum_tty_disabled">May decrease the quality of voice calls through a wired headset</string>
    <string name="sum_hac_enabled">Attention: Enabling HAC will amplify in-call volume.</string>
    <string name="sum_hac_disabled">Attention: Enabling HAC will amplify in-call volume.</string>
    <string name="unblock_pin2">Unblock PIN2</string>
    <string name="sum_unblock_pin2">PIN2 is locked. You need to enter the PUK2.</string>
    <string name="blocked_puk2">PUK2 is locked.</string>
    <string name="pin2_unblocked">PIN2 is unblocked</string>
    <string name="sum_blocked_puk2">PUK2 is locked. No more changes are allowed.</string>
    <string name="menu_sendContactViaSms">Send contact via SMS</string>
    <string name="turn_on_radio_for_emergency">Turn on phone radio to make an emergency call?</string>
    <string name="labelCB">Call barring</string>
    <string name="call_barring_settings">Call barring settings</string>
    <string name="cb_all_outgoing">All outgoing</string>
    <string name="cb_outgoing_intl">Outgoing international</string>
    <string name="cb_outgoing_intl_roam">Outgoing international roaming</string>
    <string name="cb_all_incoming">All incoming</string>
    <string name="cb_incoming_roaming">Incoming calls when roaming</string>
    <string name="cb_deactive_all">Deactivate all</string>
    <string name="cb_change_passwd">Change password</string>
    <string name="enterCBPin">Enter call barring password.</string>
    <string name="new_password">Enter new password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="password_changed">Password changed</string>
    <string name="cb_verifyFailed">The passwords you typed do not match. Please try again.</string>
    <string name="cb_password_registration_failure">Password registration failure.</string>
    <string name="cb_password_negative_check">Invalid barring password.</string>
    <string name="cb_password_attemp_violation">Invalid barring password. Locked. Please contact Customer Center.</string>
    <string name="fdn_list_full">FDN list is full.</string>
    <string name="answer_call">Answer</string>
    <string name="decline_call">Decline</string>
    <string name="separate_this_call">Private call</string>
    <string name="view_contact">Contact card</string>
    <string name="end_this_call">Finish this call</string>
    <string name="mm_location_update_err_2">SIM not provisioned MM #2</string>
    <string name="mm_location_update_err_3">SIM not allowed MM #3</string>
    <string name="mm_location_update_err_4">Call failed MM #4</string>
    <string name="mm_location_update_err_5">Call failed MM #5</string>
    <string name="mm_location_update_err_6">Phone not allowed MM #6</string>
    <string name="mm_location_update_err_11">PLMN not allowed</string>
    <string name="pref_title_cb_enable">Cell broadcast</string>
    <string name="pref_summary_cb_enable">Enable receipt of CB messages</string>
    <string name="pref_summary_cb_disable">Disable receipt of CB messages</string>
    <string name="pref_title_cb_setting">Cell broadcast settings</string>
    <string name="pref_summary_cb_setting">Set cell broadcast channel and language</string>
    <string name="pref_title_recevie_channel_list">Receive channel list</string>
    <string name="pref_title_lang_list">Language</string>
    <string name="pref_dialog_lang_title_list">Select language</string>
    <string name="pref_title_add_channel">Add channel</string>
    <string name="pref_add_channel_name">Channel name</string>
    <string name="menu_view_contacts">People</string>
    <string name="menu_muteRinging">Mute</string>
    <string name="menu_sendMessage">Send message</string>
    <string name="clear_mwi">Clear voicemail notification</string>
    <string name="sum_clear_mwi">Remove voicemail notification</string>
    <string name="menu_launchDialer">Dialer</string>
    <string name="preference_call_reject_edit">Edit default message</string>
    <string name="preference_call_reject_statement">I am busy right now. I will call you later.</string>
    <string name="preference_call_reject_enable_title">Edit message</string>
    <string name="preference_call_reject_enable">Edit text message before sending</string>
    <string name="preference_save_contact">Save to contacts</string>
    <string name="preference_save_contact_statement">Add unknown numbers to People after call</string>
    <string name="htc_advanced_setting">Phone settings</string>
    <string name="htc_sum_advanced_setting">Phone settings for device</string>
    <string name="menu_speaker_on">Speaker on</string>
    <string name="menu_bluetooth_off">BT headset off</string>
    <string name="menu_endHeldCall">End held call</string>
    <string name="menu_endAllCalls">End all calls</string>
    <string name="htc_call_settings">Call</string>
    <string name="menu_startRecording">Start recording</string>
    <string name="menuAudioSource">Switch audio output</string>
    <string name="defer_call">Defer</string>
    <string name="ddtm_mode">DDTM mode</string>
    <string name="ddtm_mode_summary">Send voice calls to voicemail during active data connection</string>
    <string name="auto_prepend_title">Automatic prepend</string>
    <string name="auto_prepend_summary">Automatically adds \"1\" for long distance calls</string>
    <string name="htc_labelNBPCD">NBPCD</string>
    <string name="htc_sum_cdma_call_setting">NBPCD Current Country</string>
    <string name="htc_labelAssistedDialing">Assisted Dialing</string>
    <string name="htc_sum_cdma_AssistedDialing">Assisted Dialing Settings</string>
    <string name="plus_code_dialing_category">Plus code dialing</string>
    <string name="plus_code_dialing_title">Plus code dialing</string>
    <string name="plus_code_dialing_summary">Set plus code dialing policy</string>
    <string name="north_american_dialing">North American dialing</string>
    <string name="north_american_dialing_summary_on">Replace \"+\" with international dialing code, except \"+1\"</string>
    <string name="north_american_dialing_summary_off">Replace \"+\" with international dialing code</string>
    <string name="international_dialing_code">International dialing</string>
    <string name="international_dialing_code_summary">Set international dialing code</string>
    <string name="additional_call_settings">Additional call settings</string>
    <string name="international_dialing_assistant">International dialing assistant</string>
    <string name="international_dialing_assistant_summary_on">Replace the \"+\" with international code except \"+82\"</string>
    <string name="international_dialing_assistant_summary_off">Replace the \"+\" with international code</string>
    <string name="international_dialing_assistant_settings">International dialing assistant settings</string>
    <string name="dial_in_voicemail_title">Listen to voice message</string>
    <string name="always_call_fwd_to_voicemail_title">Always forward</string>
    <string name="always_call_fwd_to_voicemail_summary">All incoming calls will forward to voicemail</string>
    <string name="call_fwd_to_voicemail_title">Forward when busy</string>
    <string name="call_fwd_to_voicemail_summary">Incoming calls will forward to voicemail when busy</string>
    <string name="voice_roaming_title">Receive calls when roaming</string>
    <string name="phone_number_option_title">Phone number</string>
    <string name="phone_number_option_summary">Settings for phone number</string>
    <string name="charm_notification">Charm notification</string>
    <string name="charm_notification_summary">Light up charm for incoming calls and missed calls</string>
    <string name="phono_notification_preview">Phone notification preview</string>
    <string name="phono_notification_preview_summary">Show caller ID for missed calls and voicemails on lock screen and status bar</string>
    <string name="menu_mute">Mute</string>
    <string name="menu_hold">Hold</string>
    <string name="menu_swapCalls">Swap calls</string>
    <string name="menu_mergeCalls">Merge calls</string>
    <string name="menu_addCall">Add call</string>
    <string name="menu_answerAndHold">"Hold current call
&amp; answer"</string>
    <string name="menu_answerAndEnd">"End current call
&amp; answer"</string>
    <string name="labelGSMMore">GSM call settings</string>
    <string name="labelCDMAMore">CDMA call settings</string>
    <string name="voicemail">Voicemail</string>
    <string name="sum_gsm_call_settings">Additional GSM only call settings</string>
    <string name="additional_cdma_call_settings">Additional CDMA call settings</string>
    <string name="sum_cdma_call_settings">Additional CDMA only call settings</string>
    <string name="labelCallerId">Caller ID</string>
    <string name="labelCW">Call waiting</string>
    <string name="sum_cw_enabled">During a call, notify me of incoming calls</string>
    <string name="sum_cw_disabled">During a call, notify me of incoming calls</string>
    <string name="labelCF">Call forwarding</string>
    <string name="sum_voicemail_choose_provider">Choose voicemail service</string>
    <string name="fdn">Fixed Dialing Numbers</string>
    <string name="sum_fdn">Manage Fixed Dialing Numbers</string>
    <string name="voice_privacy">Voice Privacy</string>
    <string name="voice_privacy_summary">Enable enhanced privacy mode</string>
    <string name="tty_mode_title">TTY mode</string>
    <string name="tty_mode_option_title">TTY mode</string>
    <string name="tty_mode_option_summary">Set TTY mode</string>
    <string name="auto_retry_mode_title">Auto Retry</string>
    <string name="auto_retry_mode_summary">Enable Auto Retry mode</string>
    <string name="voicemail_settings_number_label">Voicemail number</string>
    <string name="hac_mode_title">Hearing aids</string>
    <string name="hac_mode_summary">Turn on hearing aid compatibility</string>
    <string name="dtmf_tones_title">DTMF Tones</string>
    <string name="dtmf_tones_summary">Set the length of DTMF tones</string>
    <string name="voicemail_settings">Voicemail settings</string>
    <string name="voicemail_provider">Voicemail service</string>
    <string name="other_settings">Other call settings</string>
    <string name="sip_edit_title">SIP account details</string>
    <string name="domain_address_title">Server</string>
    <string name="username_title">Username</string>
    <string name="password_title">Password</string>
    <string name="set_primary_title">Set as primary account</string>
    <string name="set_primary_summary">Used for outbound calls</string>
    <string name="advanced_settings">Optional settings</string>
    <string name="default_preference_summary">&lt;Not set></string>
    <string name="advanced_settings_show">▷ Touch to show all</string>
    <string name="domain_address">SipDomain</string>
    <string name="username">UserName</string>
    <string name="password">Password</string>
    <string name="set_primary">SetPrimary</string>
    <string name="home_dialing_title">Home dialing</string>
    <string name="home_dialing_enabled_summary">Enable home dialing when roaming</string>
    <string name="home_dialing_disabled_summary">Disable home dialing when roaming</string>
    <string name="home_dialing_settings_title">Home dialing settings</string>
</resources>