<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:icon="@com.htc:drawable/common_icon_menu_ignore" android:id="@id/menuEndCall" android:title="@string/decline_call" />
    <item android:icon="@com.htc:drawable/common_icon_menu_add_call" android:id="@id/menuAddCall" android:title="@string/menu_addCall" />
    <item android:icon="@com.htc:drawable/common_icon_menu_swap" android:id="@id/menuSwapCalls" android:title="@string/menu_swapCalls" />
    <item android:icon="@com.htc:drawable/common_icon_menu_merge" android:id="@id/menuMergeCalls" android:title="@string/menu_mergeCalls" />
    <item android:icon="@com.htc:drawable/common_icon_menu_bluetooth" android:id="@id/menuBluetooth" android:title="@string/menu_bluetooth_off" />
    <item android:icon="@com.htc:drawable/common_icon_menu_speaker_on" android:id="@id/menuSpeaker" android:title="@string/menu_speaker_on" />
    <item android:icon="@com.htc:drawable/common_icon_menu_mute" android:id="@id/menuMute" android:title="@string/menu_mute" />
    <item android:icon="@com.htc:drawable/common_icon_menu_hold" android:id="@id/menuHold" android:title="@string/menu_hold" />
    <item android:icon="@com.htc:drawable/common_icon_menu_swap" android:id="@id/menuAnswerAndHold" android:title="@string/menu_answerAndHold" />
    <item android:icon="@com.htc:drawable/common_icon_menu_answer_and_end" android:id="@id/menuAnswerAndEnd" android:title="@string/menu_answerAndEnd" />
    <item android:icon="@com.htc:drawable/common_icon_menu_open_contacts" android:id="@id/menuViewContacts" android:title="@string/menu_view_contacts" />
    <item android:icon="@com.htc:drawable/common_icon_menu_mute_ring" android:id="@id/menuMuteRinging" android:title="@string/menu_muteRinging" />
    <item android:icon="@com.htc:drawable/common_icon_menu_send_text" android:id="@id/menuSendMessage" android:title="@string/menu_sendMessage" />
    <item android:id="@id/menuLaunchDialer" android:title="@string/menu_launchDialer" />
    <item android:icon="@com.htc:drawable/common_icon_menu_hold_off" android:id="@id/menuEndHeldCall" android:title="@string/menu_endHeldCall" />
    <item android:icon="@com.htc:drawable/common_icon_menu_end_call" android:id="@id/menuEndAllCalls" android:title="@string/menu_endAllCalls" />
    <item android:icon="@com.htc:drawable/common_icon_menu_phone_bluetooth_headset" android:id="@id/menuAudioSrcSelection" android:title="@string/menuAudioSource" />
    <item android:icon="@com.htc:drawable/common_icon_menu_voice_record" android:id="@id/menuRecorder" android:title="@string/menu_startRecording" />
    <item android:icon="@drawable/icon_menu_call_defer" android:id="@id/menuDeferCall" android:title="@string/defer_call" />
</menu>
